--- a/ServicioPrueba.Infrastructure/ServicioPrueba.Infrastructure.csproj
+++ b/ServicioPrueba.Infrastructure/ServicioPrueba.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="5.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
       <PrivateAssets>all</PrivateAssets>
@@ -25,6 +26,11 @@
   <ItemGroup>
     <ProjectReference Include="..\ServicioPrueba.Application\ServicioPrueba.Application.csproj" />
     <ProjectReference Include="..\ServiciosPrueba.Domain\ServicioPrueba.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Domain\BaseRepository\" />
+    <Folder Include="Service\" />
   </ItemGroup>
 
 </Project>
